@@ -20,6 +20,7 @@
 - INTERNAL: Avoid unnecessary refresh view operations
 - INTERNAL: Share actions between play list and navigation tree and table
 - INTERNAL: Refactoring of play list
+- INTERNAL: Update search indexes only if user is going to perform a search
 - FIX: Images with alpha channel are displayed wrong
 - FIX: Too much memory needed when retrieving artist images from Last.fm with original size
 
